--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css">
   <script src="script.js" async></script>
 </head>
-<body>
+<body id="root">
 
 </body>
 </html>
